<resources>
    <string name="app_name">NaonApp</string>

    <string name="textVerify">verify your phone number</string>
    <string name="textOTP">verify +62XXXXXXXXX</string>
    <string name="textProfil">Profil Info</string>

    <string name="todoProfil">Image profil</string>
    <string name="todoVerifyIcom">verify icon</string>
    <string name="todoOTPIcom">verify icon</string>
    <string name="todoProfilIcom">Your Profil Image</string>

    <string name="textVerifyMessage">Naon App will send an SMS message to verify your phone number</string>
    <string name="textOtpyMessage">Enter the OTP code to verify your phone number</string>
    <string name="textProfilMessage">Please set your name and an optional profil image</string>

    <string name="btnContinue">continue</string>
    <string name="btnSetup">setup profil</string>

    <string name="text_type">Type your phone number</string>
    <string name="text_name">Type your name</string>
    <string name="textInput"> </string>

    <string name="menu_chats">Chats</string>
    <string name="menu_status">Status</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_earch">Search</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_invite">Invite</string>


    <string name="list_time">00.00 PM</string>
    <string name="list_message">message</string>
    <string name="list_name">Name</string>

    <string name="chat_message">Type a message</string>
    <string name="chat_attach">attachtion file</string>
    <string name="chat_camera">Image Photos</string>
    <string name="chat_send">send</string>
    <string name="send_chat">send chat</string>
    <string name="resiver_chat">resiver chat</string>
    <string name="emotion_chat">emotion chat</string>
    <string name="todo_image">image send chat</string>


</resources>